Changed the str to Long str for post content Support the CKeditor
Signed-off-by: Haifeng Li <omycle@gmail.com>

--- a/view/layout.html
+++ b/view/layout.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="{{ static_url("css/bootstrap.min.css") }}">
     <link rel="stylesheet" href="{{ static_url("css/docs.css") }}">
+    <script src="//cdn.ckeditor.com/4.4.7/standard/ckeditor.js"></script>
     <title>BBS system</title>
 </head>
 <body style="margin-top:10px">
