--- a/view/index.html
+++ b/view/index.html
@@ -4,7 +4,11 @@
 <form id="new_post" action="/add_post" method="post" enctype="multipart/form-data">
     <!--<div>作者：<input id="submit_author" style="width=50%"/></div>-->
     <div>标题：<input name="submit_title" style="width:80%"/></div>
-    <div style="margin-top:10px">内容：<textarea name="submit_post_content" id="submit_content"  rows="8" style="width:90%;height: 96px;"></textarea></div>
+    <div style="margin-top:10px">内容：<textarea name="submit_post_content" id="submit_content"  rows="8" style="width:90%;height: 96px;"></textarea>
+    <script>
+ CKEDITOR.replace( 'submit_post_content' );
+    </script>
+    </div>
     <div class="form-group"><label for="InputFile">上传附件</label>
     <input type="file" id="InputFile" name="inputfile"><p class="help-block">附件上传</p></div>
     <div><input id="submit_button" type="submit" value="发帖" ></div>
